# -

Moddir/: .test_kernel.ko.cmd  .test_kernel.mod.o.cmd  .test_kernel.o.cmd  Makefile  modules.order  test.c  test_kernel.c  test_kernel.c_bak  test_kernel.ko
Moddir/.tmp_versions/: test_kernel.mod
cmakedir/: CMakeLists.txt
cmakedir/app/: CMakeLists.txt  test1.c
cmakedir/src/: CMakeLists.txt  hello.c
